Fix distorted website icon on Dotcom
[MAILPOET-5017]

--- a/mailpoet/assets/css/src/components-plugin/_menu.scss
+++ b/mailpoet/assets/css/src/components-plugin/_menu.scss
@@ -4,6 +4,6 @@
 }
 
 // Fix for 3rd party plugins icons in menu that might display broken because we block loading 3rd party CSS on mailepoet pages
-#adminmenu .wp-menu-image img {
+#adminmenu :not(.toplevel_page_site-card) .wp-menu-image img {
   max-width: 20px;
 }
